attempt to fix team photo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@
     height: auto;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
 
 }
 
